# sso_project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  dev_data.json  docker-entrypoint.sh  pyproject.toml  requirements.txt
accounts/: admin.py  auth.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/static/css/: style.css
accounts/templates/: base.html
accounts/templates/accounts/: oidc_config.html
accounts/templates/home/: index.html
accounts/templates/registration/: login.html  logout.html  profile.html
sso_project/: asgi.py  settings.py  urls.py  wsgi.py
