[project]
name = "sso-project"
version = "0.1.0"
description = "A Django-based Single Sign-On (SSO) project using OIDC for authentication"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.4",
    "gunicorn>=23.0.0",
    "mozilla-django-oidc>=4.0.1",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "ruff>=0.12.2",
]

[tool.ruff]
line-length = 100
